[package]
name = "get-up"
version = "0.1.0"
edition = "2021"
authors = ["Anthony Sirois <anthonysirois999@gmail.com>"]
repository = "https://github.com/AnthonySirois/get-up"
description = ""

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.28.1"
notify-rust = "4.11.0"
rand = "0.8.5"
ratatui = "0.28.1"
